# conditional_drifting_models

./: .gitignore  LICENSE  README.md  pyproject.toml
conditional_drifting/: __init__.py  channels.py  config.py  losses.py  metrics.py  model.py  training.py
scripts/: run_awgn_ser_ber_check.py  run_drifting_benchmark.py  run_quick_model_checks.py
tests/: test_compact.py
