[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conditionwise-sinkhorn-drifting"
version = "0.1.0"
description = "Compact implementation of condition-wise Sinkhorn drifting for learned channel simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["conditional_drifting*"]

